--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -164,7 +164,7 @@ hr.small {
     display: table;
     width: 100%;
     height: 100%;
-    background: url(../img/bg2.jpg) no-repeat center center scroll;
+    background: url(../img/someone.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
